--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,6 @@ coverage.xml
 *.py,cover
 test_*.log
 
-# Migrations específicas (opcional)
-# Você pode ignorar migrations se quiser criar sempre do zero:
-# **/migrations/
-# !**/migrations/__init__.py
+
+**/migrations/
+!**/migrations/__init__.py
